[workspace]
resolver = "2"
members = [
    "loader",
    "plugin-clock",
    "plugin-control",
    "plugin-debug",
    "plugin-lastfm",
    "plugin-spotify",
    "plugin-steamvr",
]

[workspace.package]
version = "2.5.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ShayBox/VRC-OSC"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
derive-config = "2"
dotenvy_macro = "0.15"
inquire = "0.6"
rosc = "0.10"
serde = "1"
structstruck = "0.4"
tokio = "1"
toml = "0.8"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
