[package]
name = "common"
description = "Common interface for dynamically loaded plugins"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = { workspace = true, default-features = false, features = [
    "rust_latest_stable",
] }
error-stack.workspace = true
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
