[package]
name = "vrc-osc"
description = "Dynamically loaded VRChat OSC plugins written in Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dialoguer.workspace = true
human-panic = "1.1.4"
libloading = "0.8"
path-absolutize = "3.1"
rosc.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
toml.workspace = true
walkdir = "2"

[build-dependencies]
winres = "0.1"
