[package]
name = "vrc-osc"
description = "Dynamically loaded VRChat OSC plugins written in Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage = "https://git.shaybox.com/vrc-osc/releases/latest"

[lib]
name = "loader"
path = "lib.rs"

[[bin]]
name = "vrc-osc"
path = "main.rs"

[dependencies]
anyhow.workspace = true
async-ffi = { workspace = true, features = ["macros"] }
derive-config = { workspace = true, features = ["toml"] }
human-panic.workspace = true
inquire.workspace = true
libloading.workspace = true
path-absolutize.workspace = true
rosc.workspace = true
serde = { workspace = true, features = ["derive"] }
terminal-link.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
ureq.workspace = true
walkdir.workspace = true

[build-dependencies]
winres.workspace = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
