[package]
name = "plugin-clock"
description = "Sends the time to avatar prefabs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "clock"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
rosc.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true
