[package]
name = "plugin-control"
description = "Controls media playback via avatar parameters"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "control"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
rosc.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Foundation", "Media_Control"] }

[target.'cfg(unix)'.dependencies]
enigo = "0.1"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
