[package]
name = "plugin-debug"
description = "Prints all received packets to console"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "debug"
crate-type = ["cdylib"]

[dependencies]
abi_stable = { workspace = true, default-features = false, features = [
    "rust_latest_stable",
] }
common.workspace = true
error-stack.workspace = true
rosc.workspace = true
