[package]
name = "plugin-debug"
description = "Print all received osc packets to stdout"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "debug"
crate-type = ["cdylib"]

[dependencies]
abi_stable = { workspace = true, features = ["rust_latest_stable"] }
anyhow.workspace = true
common.workspace = true
rosc.workspace = true
