[package]
name = "plugin-debug"
description = "Log received OSC packets for debugging"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "debug"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
rosc.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
