[package]
name = "plugin-lastfm"
description = "Sends the current song to the chatbox"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "lastfm"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
derive-config = { workspace = true, default-features = false, features = ["toml"] }
dotenvy_macro.workspace = true
inquire.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
rosc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-this-or-that = "0.4"
structstruck.workspace = true
terminal-link = "0.1"
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
