[package]
name = "plugin-lastfm"
description = "Sends the current song to the chatbox"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "lastfm"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
async-ffi = { workspace = true, features = ["macros"] }
derive-config = { workspace = true, features = ["toml"] }
dotenvy_macro.workspace = true
inquire.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-this-or-that = "0.4"
structstruck.workspace = true
terminal-link.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true
ureq = { workspace = true, features = ["json"] }
vrc-osc.workspace = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
