[package]
name = "plugin-spotify"
description = "Sends the current song to the chatbox and controls playback via avatar prefabs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "spotify"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
dialoguer.workspace = true
ferrispot = { git = "https://github.com/Shays-Forks/Ferrispot.git", default-features = false, features = ["async", "rustls-tls"] }
rosc.workspace = true
serde = { workspace = true, features = ["derive"] }
terminal-link = "0.1"
tiny_http = "0.12"
tokio = { workspace = true, features = ["macros", "rt", "time"] }
toml.workspace = true
url = "2"
webbrowser = "0.8"
