[package]
name = "plugin-spotify"
description = "Sends the current song to the chatbox and controls playback via avatar prefabs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "spotify"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
derive-config = { workspace = true, default-features = false, features = ["toml"] }
dotenvy_macro.workspace = true
ferrispot = { git = "https://github.com/Spanfile/Ferrispot.git", default-features = false, features = [
    "async",
    "rustls-tls",
] }
inquire.workspace = true
rosc.workspace = true
serde = { workspace = true, features = ["derive"] }
spotify-lyrics = "0.0.5"
terminal-link = "0.1"
tiny_http = "0.12"
tokio = { workspace = true, features = ["macros", "rt", "time"] }
toml.workspace = true
url = "2"
webbrowser = "0.8"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
