[package]
name = "plugin-spotify"
description = "Sends the current song to the chatbox and controls playback via avatar prefabs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "spotify"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
async-ffi = { workspace = true, features = ["macros"] }
derive-config = { workspace = true, features = ["toml"] }
dotenvy_macro.workspace = true
ferrispot = { workspace = true, features = ["async", "rustls-tls"] }
inquire.workspace = true
rosc.workspace = true
serde = { workspace = true, features = ["derive"] }
spotify-lyrics.workspace = true
terminal-link.workspace = true
tiny_http.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
toml.workspace = true
url.workspace = true
webbrowser.workspace = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
