[package]
name = "plugin-steamvr"
description = "Registers VRC-OSC as a SteamVR overlay for auto-start/stop"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "steamvr"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
ovr_overlay = { git = "https://github.com/TheButlah/ovr_overlay.git", features = ["ovr_applications"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
structstruck.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true
