[package]
name = "plugin-steamvr"
description = "Registers VRC-OSC as a SteamVR overlay for auto-start/stop"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "steamvr"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
derive-config = { workspace = true, default-features = false, features = ["toml"] }
ovr_overlay = { git = "https://github.com/Shays-Forks/ovr_overlay.git", features = ["ovr_applications"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
structstruck.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
toml.workspace = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
